# backend/api/openapi.yaml
@@ -57,6 +57,32 @@ paths:
           description: Bad Request
         403:
           description: Forbidden
+  /post/{postId}:
+    get:
+      description: Get a singular post
+      security:
+        - BearerAuth: []
+      parameters:
+        - name: postId
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        200:
+          description: Post found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Post'
+        401:
+          description: Unauthorized (Access token missing or expired)
+        404:
+          description: Post not found
+        403:
+          description: Forbidden
+
   /post/{postId}/like:
     post:
       description: Like a post
@@ -83,10 +109,8 @@ paths:
           description: Unauthorized (Access token missing or expired)
         404:
           description: Post not found
-        409:
-          description: Post already liked
-        500:
-          description: Server error
+        403:
+          description: Forbidden
   /group:
     get:
       description: Get users groups
